--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,17 +14,16 @@ body {
 
 .header-overlap .content {
   background: #fff;
-  min-height: 300px;
   padding: 20px;
 }
 
 @media (min-width: 400px) {
   .header-overlap .header {
-    height: 500px;
+    padding-bottom: 200px;
   }
 
   .header-overlap .content {
-    margin-top: -100px;
+    margin-top: -200px;
     padding: 50px;
   }
 }
